[gd_scene load_steps=6 format=3 uid="uid://47ubh60kuhbd"]

[ext_resource type="Script" path="res://scripts/select_client.gd" id="1_765lx"]
[ext_resource type="FontFile" uid="uid://djd71xqk81edx" path="res://assets/fonts/Kenney Mini Square Mono.ttf" id="1_npahv"]
[ext_resource type="Texture2D" uid="uid://dvbk55kwwaqnj" path="res://assets/sprites/characters/taylor.png" id="2_osrp2"]
[ext_resource type="Texture2D" uid="uid://tba8vigigf71" path="res://assets/sprites/characters/willsmith.png" id="3_7ybs3"]
[ext_resource type="Texture2D" uid="uid://uwwo1bs52dfv" path="res://assets/sprites/characters/hannahmontana.png" id="4_nj33q"]

[node name="SelectClient" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_765lx")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 79.0
offset_bottom = 127.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="FirstClient" type="Button" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_npahv")
theme_override_font_sizes/font_size = 32
text = "Primer Cliente"

[node name="SecondClient" type="Button" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_npahv")
theme_override_font_sizes/font_size = 32
text = "Segundo Cliente"

[node name="ThirdClient" type="Button" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_npahv")
theme_override_font_sizes/font_size = 32
text = "Tercer Cliente"

[node name="CenterContainer2" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 250.0
offset_bottom = 359.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer2"]
layout_mode = 2
theme_override_constants/separation = 200
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CenterContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_osrp2")
stretch_mode = 3

[node name="TextureRect2" type="TextureRect" parent="CenterContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_7ybs3")
stretch_mode = 3

[node name="TextureRect3" type="TextureRect" parent="CenterContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_nj33q")
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="BackToMenu" type="Button" parent="MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_npahv")
text = "Volver al Men√∫ principal"

[connection signal="pressed" from="CenterContainer/HBoxContainer/FirstClient" to="." method="_on_first_client_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/SecondClient" to="." method="_on_second_client_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/ThirdClient" to="." method="_on_third_client_pressed"]
[connection signal="pressed" from="MarginContainer/BackToMenu" to="." method="_on_back_to_menu_pressed"]
